tests/error/comprehension_errors/capture2.err
Error: Copy violation (at $FILE:13:33)
   | 
11 | @guppy
12 | def foo(xs: list[int], q: qubit @owned) -> list[int]:
13 |     return [x for x in xs if bar(q)]
   |                                  ^ Variable `q` with non-copyable type `qubit` would be
   |                                    consumed multiple times when evaluating this comprehension

Guppy compilation failed due to 1 previous error
